--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -28,6 +28,7 @@ body {
 // LUCAS  BELOW
 @import "various/colors";
 @import "various/homePro";
+@import "vendors/flexbox";
 //@import "various/starRating";
 
 @import "temp";
