--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9308,15 +9308,16 @@ div.connect-button .facebook {
     font-size: 1.8em;
     color: #595959;
     text-align: center;
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
+    display: -webkit-box;
     display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
-    -webkit-flex-align: center;
+    -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
+    -moz-align-items: center;
     align-items: center;
-    text-align: center;
     justify-content: center;
     background: #f8f8f7;
     position: relative;
@@ -9410,16 +9411,26 @@ div.connect-button .facebook {
     .cal td a {
       clear: both;
       display: block;
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
+      display: -webkit-box;
       display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
       display: flex;
-      -webkit-flex-align: center;
+      -webkit-box-direction: normal;
+      -webkit-box-orient: vertical;
+      -webkit-flex-direction: column;
+      -moz-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
       -ms-flex-align: center;
       -webkit-align-items: center;
+      -moz-align-items: center;
       align-items: center;
-      text-align: center;
-      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      -moz-justify-content: center;
       justify-content: center;
       width: 100%;
       height: 100%;
@@ -14027,7 +14038,7 @@ section.home-search .home-search-mobile {
       padding-left: 0; }
 
 /*////////////////////////////////
-	    P A G E  R E S A
+        P A G E  R E S A
 ////////////////////////////////*/
 #content.reservation, .review-confirmation {
   padding-bottom: 50px; }
@@ -14040,25 +14051,34 @@ section.home-search .home-search-mobile {
       #content.reservation .breadcrumb, .review-confirmation .breadcrumb {
         padding-left: 15px; } }
   #content.reservation .booking-summary, .review-confirmation .booking-summary {
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
+    display: -webkit-box;
     display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
-    -webkit-flex-align: center;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
+    -moz-align-items: center;
     align-items: center;
-    text-align: center;
     text-align: inherit;
-    flex-direction: row;
     border-top: 1px solid #dfdfdf;
     border-bottom: 1px solid #dfdfdf;
     padding: 15px 0;
-    margin: 0 0px;
-    align-items: center;
-    -webkit-align-items: center; }
+    margin: 0 0px; }
     @media screen and (max-width: 767px) {
       #content.reservation .booking-summary, .review-confirmation .booking-summary {
+        -webkit-box-direction: normal;
+        -webkit-box-orient: vertical;
+        -webkit-flex-direction: column;
+        -moz-flex-direction: column;
+        -ms-flex-direction: column;
         flex-direction: column;
         margin: 0;
         border-top: 0;
@@ -14127,18 +14147,23 @@ section.home-search .home-search-mobile {
       #content.reservation .booking-summary .edit-bloc, .review-confirmation .booking-summary .edit-bloc {
         width: 100%; } }
     #content.reservation .booking-summary .edit-bloc .edit, .review-confirmation .booking-summary .edit-bloc .edit {
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
+      display: -webkit-box;
       display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
       display: flex;
-      -webkit-flex-align: center;
+      -webkit-box-align: center;
       -ms-flex-align: center;
       -webkit-align-items: center;
+      -moz-align-items: center;
       align-items: center;
-      text-align: center;
       float: right; }
       @media screen and (max-width: 767px) {
         #content.reservation .booking-summary .edit-bloc .edit, .review-confirmation .booking-summary .edit-bloc .edit {
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          -webkit-justify-content: center;
+          -moz-justify-content: center;
           justify-content: center;
           float: none; } }
       #content.reservation .booking-summary .edit-bloc .edit .btn-whitered, .review-confirmation .booking-summary .edit-bloc .edit .btn-whitered {
@@ -14224,15 +14249,16 @@ section.home-search .home-search-mobile {
           height: 45px;
           width: 65px;
           position: relative;
-          display: -webkit-flexbox;
-          display: -ms-flexbox;
+          display: -webkit-box;
           display: -webkit-flex;
+          display: -moz-flex;
+          display: -ms-flexbox;
           display: flex;
-          -webkit-flex-align: center;
+          -webkit-box-align: center;
           -ms-flex-align: center;
           -webkit-align-items: center;
+          -moz-align-items: center;
           align-items: center;
-          text-align: center;
           float: left;
           border: 1px solid #e5e5e5;
           border-radius: 2px;
@@ -14276,18 +14302,28 @@ section.home-search .home-search-mobile {
     border-radius: 0;
     height: 50px;
     width: 300px; }
+  #content.reservation.bookingForm .main-content .info-form .form-group input[name="userEmail"], .bookingForm.review-confirmation .main-content .info-form .form-group input[name="userEmail"],
+  #content.reservation.bookingForm .main-content .info-form .form-group input[name="userFirstName"], .bookingForm.review-confirmation .main-content .info-form .form-group input[name="userFirstName"],
+  #content.reservation.bookingForm .main-content .info-form .form-group input[name="userLastName"], .bookingForm.review-confirmation .main-content .info-form .form-group input[name="userLastName"],
+  #content.reservation.bookingForm .main-content .info-form .form-group input[name="connectEmail"], .bookingForm.review-confirmation .main-content .info-form .form-group input[name="connectEmail"] {
+    border-bottom: 0; }
   #content.reservation.bookingForm .main-content .info-form .customer-infos, .bookingForm.review-confirmation .main-content .info-form .customer-infos {
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
+    display: -webkit-box;
     display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
-    -webkit-flex-align: center;
+    -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
+    -moz-align-items: center;
     align-items: center;
-    text-align: center;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
-    align-items: center;
     padding-top: 25px; }
     #content.reservation.bookingForm .main-content .info-form .customer-infos .radio-inline, .bookingForm.review-confirmation .main-content .info-form .customer-infos .radio-inline {
       margin-bottom: 15px;
@@ -14313,28 +14349,53 @@ section.home-search .home-search-mobile {
         letter-spacing: 0;
         font-size: 1.6em;
         height: 40px;
-        display: -webkit-flexbox;
-        display: -ms-flexbox;
+        display: -webkit-box;
         display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
         display: flex;
-        -webkit-flex-align: center;
+        -webkit-box-align: center;
         -ms-flex-align: center;
         -webkit-align-items: center;
+        -moz-align-items: center;
         align-items: center;
-        text-align: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        -moz-justify-content: center;
         justify-content: center; }
   #content.reservation.bookingForm .main-content .info-form .cut-infos, .bookingForm.review-confirmation .main-content .info-form .cut-infos {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     padding-top: 25px; }
     #content.reservation.bookingForm .main-content .info-form .cut-infos div.radio-group, .bookingForm.review-confirmation .main-content .info-form .cut-infos div.radio-group {
-      display: -webkit-flexbox;
-      display: -ms-flexbox;
+      display: -webkit-box;
       display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
       display: flex;
-      -webkit-flex-align: center;
+      -webkit-box-align: center;
       -ms-flex-align: center;
       -webkit-align-items: center;
+      -moz-align-items: center;
       align-items: center;
-      text-align: center;
+      -ms-flex-pack: distribute;
+      -webkit-justify-content: space-around;
+      -moz-justify-content: space-around;
       justify-content: space-around;
       width: 300px; }
       #content.reservation.bookingForm .main-content .info-form .cut-infos div.radio-group input[type="radio"], .bookingForm.review-confirmation .main-content .info-form .cut-infos div.radio-group input[type="radio"] {
@@ -14345,17 +14406,40 @@ section.home-search .home-search-mobile {
       #content.reservation.bookingForm .main-content .info-form .cut-infos label.firstTimeCustomer > span, .bookingForm.review-confirmation .main-content .info-form .cut-infos label.firstTimeCustomer > span {
         font-weight: 200; }
   #content.reservation.bookingForm .main-content .info-form .form-end, .bookingForm.review-confirmation .main-content .info-form .form-end {
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
+    display: -webkit-box;
     display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    text-align: center;
-    -webkit-align-items: center;
-    align-items: flex-start; }
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    -webkit-align-items: flex-start;
+    -moz-align-items: flex-start;
+    align-items: flex-start;
+    margin-bottom: 20px; }
+  #content.reservation.bookingForm .main-content .info-form .btn-red, .bookingForm.review-confirmation .main-content .info-form .btn-red {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    letter-spacing: 0;
+    text-transform: none;
+    font-weight: 200;
+    width: 250px;
+    height: auto;
+    line-height: 30px; }
   #content.reservation.bookingForm .legend.conf p, .bookingForm.review-confirmation .legend.conf p {
     margin-bottom: 10px; }
     #content.reservation.bookingForm .legend.conf p:first-child, .bookingForm.review-confirmation .legend.conf p:first-child {
@@ -14516,6 +14600,17 @@ section.home-search .home-search-mobile {
       #content.reservation.bookingForm .btn-red, .bookingForm.review-confirmation .btn-red, #content.reservation.bookingForm .btn-book, .bookingForm.review-confirmation .btn-book {
         width: 90%;
         font-size: 1.5em; } }
+
+#content.reservation.confirmation .row .legend, .confirmation.review-confirmation .row .legend {
+  padding-top: 20px; }
+  #content.reservation.confirmation .row .legend h3, .confirmation.review-confirmation .row .legend h3 {
+    letter-spacing: 0;
+    font-size: 1.6em;
+    font-weight: 400; }
+  #content.reservation.confirmation .row .legend p, .confirmation.review-confirmation .row .legend p {
+    letter-spacing: 0;
+    font-size: 1.2em;
+    font-weight: 200; }
 
 #content.reservation.confirmation .row input.registration, .confirmation.review-confirmation .row input.registration {
   width: 60%;
