--- a/public/scss/partials/_calendar.scss
+++ b/public/scss/partials/_calendar.scss
@@ -17,7 +17,8 @@
         font-size: 1.8em;
         color: $darkgrey;
         text-align: center;
-        @include flex-center;
+        @include flexbox;
+        @include align-items(center);
         justify-content: center;
         background: $grey9;
         position: relative;
@@ -126,9 +127,10 @@
         a {
             clear: both;
             display: block;
-            @include flex-center;
-            flex-direction: column;
-            justify-content: center;
+            @include flexbox;
+            @include flex-direction(column);
+            @include align-items(center);
+            @include justify-content(center);
             width:100%; height: 100%;
             color: #666;
             margin: 0 auto;
